# muit_travel

./: Makefile  README.md  docker-compose.yml
backend/: Dockerfile  manage.py  pyproject.toml
backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_remove_route_inn_type_spot_description_and_more.py
backend/muit_travel/: asgi.py  settings.py  wsgi.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/components/: footer.js  header.js
frontend/pages/: _app.js  index.js  login.js  mypage.js  plan-detail.js  register.js  registercomplete.js  search.js  search_result.js
frontend/styles/: Home.module.css  globals.css
